--- a/UTS DIKY/diky.html
+++ b/UTS DIKY/diky.html
@@ -94,7 +94,7 @@
             <div class="medsos">
                 <div class="memohon">
                     <h3>FOLLOW US</h3>
-                    <p>Kami siap menerima perntayaan anda dan kedatangan anda</p>
+                    <p>Kami siap menerima pertanyaan anda dan kedatangan anda</p>
                     <h5>Jl. Pisangan 3, Pamulang Barat</h5>
                 </div>
                 <div class="medsos-konten">
